--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,4 @@
 name: riverpod_app
-description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -28,7 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.8
+  device_preview: ^1.3.1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
