--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,14 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   device_preview: ^1.3.1
+  dio: ^5.9.0
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  freezed_annotation: ^3.1.0
   http: ^1.4.0
+  json_annotation: ^4.8.1
   riverpod_annotation: ^2.6.1
 
 dev_dependencies:
@@ -41,8 +44,11 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.1.0
+  json_serializable: ^6.7.1
   riverpod_generator: ^2.6.4
   riverpod_lint: ^2.6.5
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
